fix: text align left in specializations title

--- a/src/components/Specialization/SpecItem.module.css
+++ b/src/components/Specialization/SpecItem.module.css
@@ -22,6 +22,7 @@
   font-size: 20px;
   font-weight: 700;
   margin-left: 20px;
+  text-align: left;
 }
 
 .content {
